Wed Jan 15 14:04:33 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (get_encoding): respect BOM on pseudo encodings.
	  [ruby-dev:47895] [Bug #9415]

Wed Jan 15 14:03:47 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (get_actual_encoding): get actual encoding according to
	  the BOM if exists.

	* string.c (rb_str_inspect): use according encoding, instead of
	  pseudo encodings, UTF-{16,32}.  [ruby-core:59757] [Bug #8940]

Tue Jan 14 21:07:22 2014  Masaki Matsushita  <glass.saga@gmail.com>

	* ext/thread/thread.c (rb_szqueue_clear): notify SZQUEUE_WAITERS
	  on SizedQueue#clear. [ruby-core:59462] [Bug #9342]

	* test/thread/test_queue.rb: add test. the patch is from
	  Justin Collins.

Tue Jan 14 15:58:43 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (CLASS_NAME): macro to wrap
	  depending on PRIsVALUE for 1.9.  [Backport #9406]

	* ext/bigdecimal/bigdecimal.c (DECIMAL_SIZE_OF_BITS): fallback
	  definition for 2.1 or older.  [ruby-core:59750] [Backport #9406]

Tue Jan 14 11:28:44 2014  Yuki Yugui Sonoda  <yugui@google.com>

	* vm_exec.c (cfp): Fixes a SEGV issue in r44554.
	  r11 can be broken by subroutine and sometimes causes SEGV at
	  runtime.  Use r13 instead.

Tue Jan 14 02:20:00 2014  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_divide): Add an additional
	  digit for the quotient to be compatible with bigdecimal 1.2.1 and
	  the former.  [ruby-core:59365] [#9316] [#9305]

	* test/bigdecimal/test_bigdecimal.rb: tests for the above change.

	* ext/bigdecimal/bigdecimal.gemspec: bigdecimal version 1.2.4.

Mon Jan 13 14:55:31 2014  Zachary Scott  <e@zzak.io>

	* lib/xmlrpc/client.rb: [DOC] Remove note about SSL package on RAA
	  Since RAA has been deprecated, and the SSL package has been replaced
	  with net/https this statement is entirely false and should be
	  deleted. [Bug #9152]

Mon Jan 13 14:47:07 2014  Zachary Scott  <e@zzak.io>
